tests/ui/invalid_pymodule_trait.stderr
error: only 'use' statements and and pymodule_init functions are allowed in #[pymodule]
 --> tests/ui/invalid_pymodule_trait.rs:5:5
  |
5 |     #[pymodule_export]
  |     ^
